# scandumper

./: .gitignore  Cargo.toml  Cross.toml  README.md  build
common/: Cargo.toml
common/src/: lib.rs
config/: Cargo.toml
config/src/: lib.rs  object_store.rs
example/: config.toml
example/excluded/IMG_20231225_165148/: .lg.checksum
example/excluded/IMG_20231225_165148/shapes/: .star.checksum
import/: Cargo.toml
import/src/: actions.rs  main.rs
import/src/resize/: jpeg.rs  mod.rs  png.rs
import/src/transform/: mod.rs  polygons.rs  rectangle.rs  round.rs  triangles.rs
server/: Cargo.toml
server/src/: main.rs
updater/: Cargo.toml
updater/src/: jpeg.rs  main.rs  object_store.rs  png.rs  resizer.rs
