[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
toml = "0.8.8"
aws-creds = { version = "0.34.1" }
aws-region = { version = "0.25.4", features = ["serde"] }
rust-s3 = "0.33.0"
tracing = "0.1"
