[package]
name = "import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "scandumper"
path = "src/main.rs"

[dependencies]
config = { path = "../config" }
fast_image_resize = { version = "4.0.0", features = ["image"] }
bytemuck = "1.16.0"
image = "0.25.1"
imageproc = "0.25.0"
adler = "1.0.2"
tracing = "0.1"
toml = "0.8.8"
walkdir = "2.5.0"
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.34.0", features = ["full"] }
