[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "imgserver"
path = "src/main.rs"

[dependencies]
config = { path = "../config" }
axum = { version = "0.7.5" }
tokio = { version = "1.37", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
rust-s3 = "0.33.0"
tracing = "0.1"
toml = "0.8.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = {version = "1", features = ["derive"]}
anyhow = { version = "1" }
