[package]
name = "updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
fast_image_resize = "2.7.3"
tracing = "0.1"
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.75"
image = "0.24.7"
walkdir = "2.4.0"
rust-s3 = "0.33.0"
tokio = { version = "1.34.0", features = ["full"] }
rust-crypto = "0.2.36"
